chapter4/cicd-iac/manifests/jenkins.yaml

apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp
  labels:
    app: jenkins
spec:
    type: ClusterIP
    ports:
      - name: agent
        nodePort: 0
        port: 50000
        protocol: TCP
        targetPort: 50000
    selector:
      name: jenkins
    sessionAffinity: None

---

apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
    type: ClusterIP
    ports:
      - name: web
        nodePort: 0
        port: 80
        protocol: TCP
        targetPort: 8080
    selector:
      name: jenkins
    sessionAffinity: None

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  labels:
    app: jenkins
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  generation: 1
spec:
  rules:
  - host: jenkins.$$dns_suffix
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      name: jenkins
      app: jenkins
  template:
    metadata:
      labels:
        name: jenkins
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: dockerhub.azk8s.cn/jenkins/jenkins:2.190.1
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          livenessProbe:
            failureThreshold: 2
            httpGet: 
              path: /login
              port: 8080        
            initialDelaySeconds: 600
            periodSeconds: 60
            timeoutSeconds: 240
          readinessProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 3
            timeoutSeconds: 15
          resources:
            requests:
              memory: 512Mi
              cpu: 200m
            limits:
              memory: 1024Mi
              cpu: 1
          volumeMounts: 
            - mountPath: /tmp
              name: tmp
            - name: jenkins-home
              mountPath: /var/jenkins_home
              readOnly: false
            - mountPath: /var/jenkins_config
              name: jenkins-config
              readOnly: true
            - mountPath: /var/jenkins_jobs
              name: jenkins-jobs
              readOnly: true
            - name: plugin-dir
              mountPath: /usr/share/jenkins/ref/plugins/
              readOnly: false
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      serviceAccountName: jenkins
      volumes:
        - name: plugins
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: plugin-dir
          emptyDir: {}
        - name: jenkins-home
          emptyDir: {}
        - name: jenkins-config
          configMap:
            name: jenkins
        - name: jenkins-jobs
          configMap:
            name: jenkins-jobs
